2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* section-table-tests.md: New test suite for
	section headers.

	* Makefile: Add new test suite.

2009-02-05 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add section-table var.
	Add support for function calls. Added read.uint.
	Added support for complex arithmetic expressions.

2009-01-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add more tests for pe optional header.

2009-01-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add pe-optional-heaver var.
	Improve debugging messages. 

2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Improve debugging.

	* header-tests.md: Add tests for the optional header.

2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Revert decision of making base 16 the default.
	It makes for shorter tests, but it's confusing.

	* header-tests.md: Fix the tests to use an explicit 0x for hexadecimal numbers.

2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add tests for characteristics.

2009-01-14 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Improved debugging and made small cleanup on macro names.

2009-01-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add tests for symbol table and number of symbols.

2009-01-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add tests for the machine field.

2009-01-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Add set-uint effect.

2009-01-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Rename pe-header to pe-signature.
	Add pe-header tests.

2009-01-13 Rodrigo Kumpera  <rkumpera@novell.com>

	* gen-md-tests.c: Rename pe-header to pe-signature.
	Add support for decimal literals using a '0' prefix.
	Add proper pe-header variable.

2009-01-12 Rodrigo Kumpera  <rkumpera@novell.com>

	* header-tests.md: Add tests for pe header.

2009-01-12 Rodrigo Kumpera  <rkumpera@novell.com>
